--- a/css/style.css
+++ b/css/style.css
@@ -371,7 +371,7 @@ body {
 }
 
 .dropdown .group-blocks__contant .group-blocks__logo-game {
-  background: url("/img/media-logo/Wc9we6f7SWeZPExOChwGRA.svg") no-repeat;
+  background: url("../img/media-logo/Wc9we6f7SWeZPExOChwGRA.svg") no-repeat;
   width: 80%;
   max-width: 200px;
   height: 110px;
@@ -492,11 +492,11 @@ body {
 }
 
 .dropdown .group-blocks:nth-child(2) {
-  background: url(/img/list-logo/0.jpg) 51%;
+  background: url(../img/list-logo/0.jpg) 51%;
 }
 
 .dropdown .group-blocks:nth-child(3) {
-  background: url(/img/list-logo/1.jpg) 51%;
+  background: url(../img/list-logo/1.jpg) 51%;
   display: none;
 }
 
@@ -509,7 +509,7 @@ body {
 }
 
 .dropdown .group-blocks:nth-child(4) {
-  background: url(/img/list-logo/2.jpg) 51%;
+  background: url(../img/list-logo/2.jpg) 51%;
   display: none;
 }
 
@@ -527,7 +527,7 @@ body {
 }
 
 .dropdown .group-blocks:nth-child(5) {
-  background: url(/img/list-logo/3.jpg) 51%;
+  background: url(../img/list-logo/3.jpg) 51%;
   display: none;
 }
 
@@ -540,7 +540,7 @@ body {
 }
 
 .dropdown .group-blocks:nth-child(6) {
-  background: url(/img/list-logo/4.jpg) 51%;
+  background: url(../img/list-logo/4.jpg) 51%;
   display: none;
 }
 
@@ -549,13 +549,13 @@ body {
 }
 
 .dropdown .group-blocks:nth-child(6) .group-blocks__media .group-blocks__container .group-blocks__logo-game {
-  background: url("/img/media-logo/xqT9r-laSye-MXwf9nOSBQ.svg") no-repeat;
+  background: url("../img/media-logo/xqT9r-laSye-MXwf9nOSBQ.svg") no-repeat;
   width: 100%;
   height: 100%;
 }
 
 .dropdown .group-blocks:nth-child(7) {
-  background: url(/img/list-logo/5.jpg) 51%;
+  background: url(../img/list-logo/5.jpg) 51%;
   display: none;
 }
 
@@ -564,7 +564,7 @@ body {
 }
 
 .dropdown .group-blocks:nth-child(7) .group-blocks__media .group-blocks__container .group-blocks__logo-game {
-  background: url("/img/media-logo/2A13Rhr2T1uWz-gj_ENzjQ.svg") no-repeat;
+  background: url("../img/media-logo/2A13Rhr2T1uWz-gj_ENzjQ.svg") no-repeat;
   width: 210px;
   height: 35px;
 }
@@ -639,7 +639,7 @@ body {
 }
 
 .main-heading .main-menu__nav-arrow {
-  background: url(/img/arrow/down.svg) no-repeat;
+  background: url(../img/arrow/down.svg) no-repeat;
   background-position: center;
   position: relative;
   margin: 17px 0 2px 10px;
@@ -668,7 +668,7 @@ body {
 }
 
 .main-heading .main-menu__items:nth-child(1) {
-  background: url(/img/logo-wot/download.svg) no-repeat;
+  background: url(../img/logo-wot/download.svg) no-repeat;
   background-position: 0 center;
   margin-left: 0;
   height: 44px;
@@ -682,7 +682,7 @@ body {
 }
 
 .main-heading .main-menu__items:nth-child(5) .ten-years::before {
-  background: url(/img/10-year/10-year-icon.png) center/contain;
+  background: url(../img/10-year/10-year-icon.png) center/contain;
   margin: 10px 0 0 0px;
   position: absolute;
   content: "";
@@ -693,7 +693,7 @@ body {
 
 .main-heading .main-menu__items:nth-child(5) .ten-years::after {
   content: "";
-  background: url(/img/10-year/10y-icon-hover.png) center;
+  background: url(../img/10-year/10y-icon-hover.png) center;
   -webkit-animation: rotate 3s linear infinite;
           animation: rotate 3s linear infinite;
   -webkit-transition: opacity .7s;
@@ -845,7 +845,7 @@ body {
 }
 
 .main-heading .nav__blocks:last-child .nav-blocks__img {
-  background: url(/img/header-img/download.svg);
+  background: url(../img/header-img/download.svg);
   width: 22px;
   height: 22px;
 }
@@ -901,7 +901,7 @@ body {
 }
 
 .main-heading .nav-wrap__holder .sub-menu__cross {
-  background: url(/img/nav-wrap/cross-button.svg) center/contain no-repeat;
+  background: url(../img/nav-wrap/cross-button.svg) center/contain no-repeat;
   width: 12px;
   height: 12px;
   margin-left: auto;
@@ -921,7 +921,7 @@ body {
 }
 
 .main-heading .nav-wrap__holder .sub-menu__logo {
-  background: url(/img/10-year/10-year-icon.png) center/contain;
+  background: url(../img/10-year/10-year-icon.png) center/contain;
   margin: 10px 0 0 0px;
   display: block;
   height: 44px;
@@ -978,7 +978,7 @@ body {
 }
 
 .main-heading .nav-wrap__jackdaw {
-  background: url(/img/nav-wrap/jackdaw.svg) no-repeat;
+  background: url(../img/nav-wrap/jackdaw.svg) no-repeat;
   margin: 15px;
   width: 100%;
   height: 100%;
@@ -992,7 +992,7 @@ body {
 }
 
 .main-headlines__cross {
-  background: url(/img/icon/cross.svg) center no-repeat;
+  background: url(../img/icon/cross.svg) center no-repeat;
   background-color: rgba(0, 0, 0, 0.35);
   -webkit-transition: background-color .2s;
   -o-transition: background-color .2s;
@@ -1081,7 +1081,7 @@ body {
 }
 
 .main-headlines .main-headlines__logo-wot {
-  background: url(/img/logo-wot/logo.png) center/contain no-repeat;
+  background: url(../img/logo-wot/logo.png) center/contain no-repeat;
   -webkit-transition: all .25s ease-in-out;
   -o-transition: all .25s ease-in-out;
   transition: all .25s ease-in-out;
@@ -1105,7 +1105,7 @@ body {
 }
 
 .jackdaw {
-  background: url(/img/logo-wot/jackdaw.svg) center no-repeat;
+  background: url(../img/logo-wot/jackdaw.svg) center no-repeat;
   background-color: rgba(0, 0, 0, 0.35);
   -webkit-transform: rotate(180deg);
       -ms-transform: rotate(180deg);
@@ -1151,11 +1151,11 @@ body {
 }
 
 .carousel-store .slider-store .slider-block__arrows-one {
-  background: url(/img/slider/arrow/arrow-left-slider.svg) center no-repeat;
+  background: url(../img/slider/arrow/arrow-left-slider.svg) center no-repeat;
 }
 
 .carousel-store .slider-store .slider-block__arrows-two {
-  background: url(/img/slider/arrow/arrow-right-slider.svg) center no-repeat;
+  background: url(../img/slider/arrow/arrow-right-slider.svg) center no-repeat;
   right: 0;
 }
 
@@ -1292,7 +1292,7 @@ body {
 .carousel-store .block-store__premium-store:before {
   content: "";
   position: absolute;
-  background: url(/img/premium-store/wot_premshop-banner_ru_NO21NQQ.jpg) center/contain no-repeat;
+  background: url(../img/premium-store/wot_premshop-banner_ru_NO21NQQ.jpg) center/contain no-repeat;
   -webkit-transition: all .5s;
   -o-transition: all .5s;
   transition: all .5s;
@@ -1352,7 +1352,7 @@ body {
 }
 
 .carousel-store .mini-store__img {
-  background: url(/img/premium-store/logo_wot_store.svg) no-repeat;
+  background: url(../img/premium-store/logo_wot_store.svg) no-repeat;
   display: block;
   -webkit-box-flex: 0;
       -ms-flex: 0 0 18px;
@@ -1607,7 +1607,7 @@ body {
 }
 
 .footer-wrap__logo {
-  background: url(/img/footer-logo/footer-logo.png) center/cover;
+  background: url(../img/footer-logo/footer-logo.png) center/cover;
   margin-right: 17%;
   width: 101px;
   height: 54px;
@@ -2004,26 +2004,26 @@ body {
   }
 }
 
-.webp .dropdown .group-blocks:nth-child(2){ background: url(/img/list-logo/0.webp) 51%; }
+.webp .dropdown .group-blocks:nth-child(2){ background: url(../img/list-logo/0.webp) 51%; }
 
-.webp .dropdown .group-blocks:nth-child(3){ background: url(/img/list-logo/1.webp) 51%; }
+.webp .dropdown .group-blocks:nth-child(3){ background: url(../img/list-logo/1.webp) 51%; }
 
-.webp .dropdown .group-blocks:nth-child(4){ background: url(/img/list-logo/2.webp) 51%; }
+.webp .dropdown .group-blocks:nth-child(4){ background: url(../img/list-logo/2.webp) 51%; }
 
-.webp .dropdown .group-blocks:nth-child(5){ background: url(/img/list-logo/3.webp) 51%; }
+.webp .dropdown .group-blocks:nth-child(5){ background: url(../img/list-logo/3.webp) 51%; }
 
-.webp .dropdown .group-blocks:nth-child(6){ background: url(/img/list-logo/4.webp) 51%; }
+.webp .dropdown .group-blocks:nth-child(6){ background: url(../img/list-logo/4.webp) 51%; }
 
-.webp .dropdown .group-blocks:nth-child(7){ background: url(/img/list-logo/5.webp) 51%; }
+.webp .dropdown .group-blocks:nth-child(7){ background: url(../img/list-logo/5.webp) 51%; }
 
-.webp .main-heading .main-menu__items:nth-child(5) .ten-years::before{ background: url(/img/10-year/10-year-icon.webp) center/contain; }
+.webp .main-heading .main-menu__items:nth-child(5) .ten-years::before{ background: url(../img/10-year/10-year-icon.webp) center/contain; }
 
-.webp .main-heading .main-menu__items:nth-child(5) .ten-years::after{ background: url(/img/10-year/10y-icon-hover.webp) center; }
+.webp .main-heading .main-menu__items:nth-child(5) .ten-years::after{ background: url(../img/10-year/10y-icon-hover.webp) center; }
 
-.webp .main-heading .nav-wrap__holder .sub-menu__logo{ background: url(/img/10-year/10-year-icon.webp) center/contain; }
+.webp .main-heading .nav-wrap__holder .sub-menu__logo{ background: url(../img/10-year/10-year-icon.webp) center/contain; }
 
-.webp .main-headlines .main-headlines__logo-wot{ background: url(/img/logo-wot/logo.webp) center/contain no-repeat; }
+.webp .main-headlines .main-headlines__logo-wot{ background: url(../img/logo-wot/logo.webp) center/contain no-repeat; }
 
-.webp .carousel-store .block-store__premium-store:before{ background: url(/img/premium-store/wot_premshop-banner_ru_NO21NQQ.webp) center/contain no-repeat; }
+.webp .carousel-store .block-store__premium-store:before{ background: url(../img/premium-store/wot_premshop-banner_ru_NO21NQQ.webp) center/contain no-repeat; }
 
-.webp .footer-wrap__logo{ background: url(/img/footer-logo/footer-logo.webp) center/cover; }
+.webp .footer-wrap__logo{ background: url(../img/footer-logo/footer-logo.webp) center/cover; }
